@@ -362,6 +362,8 @@ compare_prices_by_date(gconstpointer a, gconstpointer b)
 {
   Timespec time_a;
   Timespec time_b;
+  gint result;
+
   if(!a && !b) return 0;
   /* nothing is always less than something */
   if(!a) return -1;
@@ -369,7 +371,12 @@ compare_prices_by_date(gconstpointer a, gconstpointer b)
   time_a = gnc_price_get_time((GNCPrice *) a);
   time_b = gnc_price_get_time((GNCPrice *) b);
 
-  return -timespec_cmp(&time_a, &time_b);
+  result = -timespec_cmp(&time_a, &time_b);
+  if (result) return result;
+
+  /* For a stable sort */
+  return guid_compare (gnc_price_get_guid((GNCPrice *) a),
+                       gnc_price_get_guid((GNCPrice *) b));
 }
 
 gboolean
